<resources>
    <string name="app_name">TravelEco</string>
    <string name="email">Email: </string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="logout">Log Out</string>
    <string name="user">User</string>
    <string name="number">Phone Number: </string>
    <string name="about">About</string>
    <string name="title_login_page">Welcome \nPlease Log in</string>
    <string name="title_signup_page">Please Register an Account</string>
    <string name="message_signup_page">Sign up soon to enjoy your exciting journey</string>
    <string name="name">Name: </string>
    <string name="isRegister">Don\'t have an account yet?</string>
    <string name="isLogin">Already have an account?</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="hint_email_login">Email</string>
    <string name="hint_password_login">Password</string>
    <string name="hint_email_register">Email Input</string>
    <string name="hint_name_register">Name Input</string>
    <string name="hint_phoneNumber_register">Phone Number Input</string>
    <string name="hint_password_register">Password Input</string>
    <string name="invalid_email">Email address does not match</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_password">Password less than 8 characters</string>
    <string name="check_validity_field">"Check Your Field"</string>
    <string name="verification_message">We have sent your OTP code. Please check the SMS we sent to your number.</string>
    <string name="resend_text">Didn\'t get the code yet?</string>
    <string name="resend_otp">Resend</string>
    <string name="verification">Verification</string>
    <string name="next">Continue</string>
    <string name="destination_location">Location Destination</string>
    <string name="destination_description">Tourist Description</string>
    <string name="error_register">Failed to Create Account</string>
    <string name="img_detail">Image Details</string>
    <string name="place_description">Description of Place</string>
    <string name="title_activity_maps">Google Maps</string>
    <string name="location">Location</string>
    <string name="view_loc">View Location</string>
    <string name="invalid_location">Location Not Found, Enable Location First!</string>
    <string name="text_or">OR</string>
    <string name="desc_logo_app">TravelEco App Icon</string>
    <string name="place">Tourist Attractions</string>
    <string name="img_place">Picture of the Place</string>
    <string name="price">Price: </string>
    <string name="header1">Pilihan Desa Wisata</string>
    <string name="carfoot">Your Carbon Footprint: </string>
    <string name="prog_act">TEGAL DUKUH EXPERIENCES</string>
    <string name="combo">COMBO TRIP</string>
    <string name="over">OVERNIGHT PACKAGE</string>
    <string name="powered">Powered by AMATI Indonesia</string>
    <string name="program">Program</string>
    <string name="name_program">Name of Program: </string>
    <string name="sub_program">Sub-Program</string>
    <string name="detail_desc">Detail Description</string>
    <string name="duration">Duration</string>
    <string name="level">Level</string>
    <string name="inclussion">Inclusion</string>
    <string name="time">Start Time</string>
    <string name="order">Order</string>
    <string name="invalid_otp_number">The code you entered is incorrect</string>
    <string name="empty_otp">You have not entered a Verification Code</string>
    <string name="button_google_text">Sign in with Google</string>
    <string name="verification_account">Verify your phone number first</string>
    <string name="hint_country_register">Your Country of Origin</string>
    <string name="personal">Personal Details</string>
    <string name="country">Nationality: </string>
    <string name="no_wa">WhatsApp Number</string>
    <string name="num_person">Number of Person: </string>
    <string name="send">Send</string>
    <string name="tf_bank">PAYMENT METHOD: \n1. Cash on Arrival \n2. Credit Card on Arrival \n3. Transfer Bank</string>
    <string name="acc_bank">BCA Account</string>
    <string name="acc_name">I Wayan Wardika</string>
    <string name="acc_number">Acc Number: 135 0435 545</string>
    <string name="bucket">Cart List</string>
    <string name="village">Village Tourism</string>
    <string name="single_package_text_view">SingleTrip Package</string>
    <string name="combo_package_text_view">ComboTrip Package</string>
    <string name="overnight_package_text_view">Overnight Package</string>
    <string name="rating_text_view">5.0</string>
    <string name="review_text_view">(7 Reviews)</string>
    <string name="empty_bucket_message">Your Cart is Empty</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="del_cart">Delete from Cart</string>
    <string name="username">User Name</string>
    <string name="about_app">TravelECO is a digital platform that connects travelers with sustainable and eco-friendly travel options. It leverages geo-tagging technology to identify and promote destinations, accommodations, activities, and tour operators that prioritize environmental conservation and minimize their carbon footprint.\nThe main goal of an ecotourism marketplace platform based on geo-tagging and carbon footprint is to promote sustainable and responsible tourism while minimizing negative environmental impacts. By connecting eco-conscious travelers with verified sustainable travel options, the platform aims to create a marketplace that supports and encourages environmentally friendly tourism practices.</string>
    <string name="receipt">Receipt</string>
    <string name="view_packet">View Packet</string>
    <string name="del_bucket">Item removed from cart</string>
    <string name="failed_del_bucket">Failed to remove item from cart</string>
    <string name="wrong">Error occurred</string>
    <string name="failed">Failed</string>
    <string name="say">Hi,</string>
    <string name="notes">Notes:\n-. Price is per person (minimum 2 person)\n-. Booking is made 24 hours prior the activity\n-. Payment is Paid prior the activity\n-. Cancellation policy apply\n-. Own Transport	</string>
    <string name="not_yet_verified">You have not verified your Email. Please check your Email to continue</string>
    <string name="not_found">Account Not Found</string>
    <string name="wrong_pass_email">Incorrect Email or Password</string>
    <string name="not_registered">Unregistered account</string>
    <string name="email_ferif">Email verification sent. Please check your email</string>
    <string name="failed_acc">Failed to Create Account</string>
    <string name="failed_acc_format">Failed to Create Account. The email address provided has an incorrect format</string>
    <string name="failed_acc_email">Failed to Create Account. Email already in use</string>
    <string name="add_bucket">Successfully Add Package to Cart</string>
    <string name="failed_bucket">Failed to Add Package to Cart</string>
    <string name="already_bucket">Package already in the cart</string>
    <string name="arrive_loc">You can enjoy it now :)</string>
    <string name="geo_added">Geofencing added</string>
    <string name="turn_on_loc">Turn on Location</string>
    <string name="person">Person</string>
    <string name="order_id">Order ID: </string>
    <string name="permission_loc">Location Permit</string>
    <string name="allow_permission">Grant Permission</string>
    <string name="msg_permission">This app requires location permission to calculate your carbon footprint based on your current location. You cannot proceed if Location is not enabled.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>