<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_place"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:elevation="4dp"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/btn_delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginStart="4dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/del_cart" />

        <TextView
            android:id="@+id/tv_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            card_view:layout_constraintStart_toEndOf="@+id/iv_program"
            card_view:layout_constraintTop_toTopOf="@+id/iv_program" />

        <ImageView
            android:id="@+id/iv_program"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/img_place"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_program"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/place_description"
            android:textSize="14sp"
            card_view:layout_constraintStart_toEndOf="@id/iv_program"
            card_view:layout_constraintTop_toBottomOf="@id/tv_program" />

        <TextView
            android:id="@+id/tv_price_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_program" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/order"
            android:textStyle="bold"
            android:textSize="16sp"
            android:backgroundTint="@color/green_pastel"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/iv_program" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>